fix(restaurant): fix letter spacing for S caron, adjust mobile wine fade-in timing

--- a/src/app/pages/restaurant/restaurant.component.scss
+++ b/src/app/pages/restaurant/restaurant.component.scss
@@ -278,7 +278,7 @@
       line-height: 0.75;
       margin-top: 0;
       margin-bottom: 80px;
-      padding: 0;
+      padding: 20px 0 0 0;
 
       &.centered {
         justify-content: center;
